# cli-games

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs  menu.rs  runner.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/games/2048/: Cargo.toml
crates/games/2048/src/: lib.rs
crates/games/_registry/: Cargo.toml
crates/games/_registry/src/: lib.rs
crates/games/anagram/: Cargo.toml
crates/games/anagram/src/: lib.rs
crates/games/asteroids/: Cargo.toml
crates/games/asteroids/src/: lib.rs
crates/games/blackjack/: Cargo.toml
crates/games/blackjack/src/: lib.rs
crates/games/boggle/: Cargo.toml
crates/games/boggle/src/: lib.rs
crates/games/breakout/: Cargo.toml
crates/games/breakout/src/: lib.rs
crates/games/chess/: Cargo.toml
crates/games/chess/src/: lib.rs
crates/games/conway/: Cargo.toml
crates/games/conway/src/: lib.rs
crates/games/dinorun/: Cargo.toml
crates/games/dinorun/src/: lib.rs
crates/games/flappy/: Cargo.toml
crates/games/flappy/src/: lib.rs
crates/games/freecell/: Cargo.toml
crates/games/freecell/src/: lib.rs
crates/games/hangman/: Cargo.toml
crates/games/hangman/src/: lib.rs
crates/games/lightsout/: Cargo.toml
crates/games/lightsout/src/: lib.rs
crates/games/mastermind/: Cargo.toml
crates/games/mastermind/src/: lib.rs
crates/games/maze/: Cargo.toml
crates/games/maze/src/: lib.rs
crates/games/memory/: Cargo.toml
crates/games/memory/src/: lib.rs
crates/games/minesweeper/: Cargo.toml
crates/games/minesweeper/src/: lib.rs
crates/games/nonogram/: Cargo.toml
crates/games/nonogram/src/: lib.rs
crates/games/peg/: Cargo.toml
crates/games/peg/src/: lib.rs
crates/games/pong/: Cargo.toml
crates/games/pong/src/: lib.rs
crates/games/racer/: Cargo.toml
crates/games/racer/src/: lib.rs
crates/games/roguelike/: Cargo.toml
crates/games/roguelike/src/: lib.rs
crates/games/simon/: Cargo.toml
crates/games/simon/src/: lib.rs
crates/games/slidepuzzle/: Cargo.toml
crates/games/slidepuzzle/src/: lib.rs
crates/games/snake/: Cargo.toml
crates/games/snake/src/: lib.rs
crates/games/sokoban/: Cargo.toml
crates/games/sokoban/src/: lib.rs
crates/games/solitaire/: Cargo.toml
crates/games/solitaire/src/: lib.rs
crates/games/spaceinvaders/: Cargo.toml
crates/games/spaceinvaders/src/: lib.rs
crates/games/sudoku/: Cargo.toml
crates/games/sudoku/src/: lib.rs
crates/games/tetris/: Cargo.toml
crates/games/tetris/src/: lib.rs
crates/games/tictactoe/: Cargo.toml
crates/games/tictactoe/src/: lib.rs
crates/games/tron/: Cargo.toml
crates/games/typing/: Cargo.toml
crates/games/videopoker/: Cargo.toml
crates/games/wordle/: Cargo.toml
crates/games/yahtzee/: Cargo.toml
docs/: ADD_A_GAME.md
scripts/: spawn-games.sh
(+5 files in other folders)
