[package]
name = "games_all"
description = "Umbrella crate that links every game so its registration is included"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# To add a game, append ONE line below (and one matching `use` in src/lib.rs).
# Keep the list alphabetical and append-only — that keeps Git merges conflict-free.
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]
game_snake = { path = "../snake" }
